# P2Pro-Viewer

./: flake.nix  main.py  pyproject.toml
P2Pro/: P2Pro_cmd.py  gui.py  recorder.py  util.py  video.py
